<resources>
    <string name="app_name">NoContactContact</string>
    <string name="eos">eos.uptrade.de</string>
    <string name="jobs">Jobs</string>
    <string name="hod">Head of Development</string>
    <string name="devOps">DevOps</string>
    <string name="java">Java</string>
    <string name="php">PHP</string>
    <string name="system_engineer">SystemEngineer</string>
    <string name="fullstack">Fullstack (PHP)</string>
    <string name="student">Student</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="add_qr_code">Add QR Code.</string>
    <string name="add_dialot_description">To add a new QR-Code to your library just enter a name and an url where the code should lead to.</string>
    <string name="add_dialog_title">Add new QR-Code.</string>
    <string name="add_button_text">Add</string>
    <string name="add_dialog_input_hint_name">Name</string>
    <string name="add_dialog_input_hint_content">Content</string>
    <string name="title_to_short_or_missing">Please insert a title.</string>
    <string name="content_to_short_or_missing">Please insert some content for the QR code.</string>
    <string name="created_qr_code">"Created QR code: "</string>
    <string name="delete_qr_code">Delete QR code:</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code_image_content_description">QR Code</string>
    <string name="content_title">Content:</string>
    <string name="share_content">Share content.</string>
    <string name="mandatory_info_error">This field is mandatory.</string>
    <string name="twitter_handle_wrong">The provided handle is not recognized.</string>
    <string name="share_disclaimer">The provided inforamtion is only shared with people scanning the created QR code.</string>
    <string name="qr_code_title_input">QR code title:</string>
    <string name="twitter_handle">Twitter handle:</string>
    <string name="instagram_handle">Instagram handle:</string>
    <string name="twitter_explanation">To create an QR code sharing your twitter handle add it here.</string>
    <string name="instagram_explanation">To create an QR code sharing your Instagram handle add it here.</string>
    <string name="twitter_headline">Twitter QR code</string>
    <string name="instagram_headline">Instagram QR code</string>
    <string name="create_qr_code_button_text">Create QR Code</string>
    <string name="qr_code_preview_image_desciption">QR code preview</string>
</resources>