<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:theme="@style/Theme.NoContactContact">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/Theme.NoContactContact.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"

            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:navGraph="@navigation/navigation_graph" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:layout_anchorGravity="bottom|right|end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/miscButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_qr_code_24"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addButton"
            app:srcCompat="@drawable/ic_baseline_alternate_email_24"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/twitterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            android:src="@drawable/ic_twitter_social_icon_circle_color_svg"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/mailButton"
            app:layout_constraintEnd_toStartOf="@id/miscButton"
            app:maxImageSize="48dp"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/instagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            android:src="@drawable/ic_icon_instagram_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/twitterButton"
            app:layout_constraintEnd_toStartOf="@id/miscButton"
            app:maxImageSize="48dp"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/wlanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            android:src="@drawable/ic_baseline_wifi_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/twitterButton"
            app:layout_constraintEnd_toStartOf="@id/mailButton"
            app:maxImageSize="48dp"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/contactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_qr_code"
            android:src="@drawable/ic_baseline_contact_phone_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/mailButton"
            app:layout_constraintEnd_toStartOf="@id/mailButton"
            app:maxImageSize="48dp"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>