...
            android:contentDescription="@string/delete_qr_code"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/contentData" />

        <ImageButton
            android:id="@+id/shareButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
...
